- Simple e-mail signature
- E-mail menu with options to lookup in addressbook, compose and search
- Works with Gmail now, but the IMAP connection is often slow
- Support for UUencoded e-mail attachments
- New timesheet in projects module for easier time registration
- Better display of project information and subprojects
- Sort project statuses by drag and drop
- Bug fixes

2008/12/18 Version 3.00-stable-5
- Dragging in calendar caused errors sometimes
- Rightclick menu on e-mail tree folder was broken
- Small problem with HTML to text conversion in e-mail

2008/12/16 Version 3.00-stable-4
- Detailed report printing in Projects module
- Improved support for Nexthaus syncml clients
- icalendar import for tasks and calendar
- message panel horizontal or vertical as preference
- Improved month view
- Import icalendar attachments in e-mail
- Right click menu added on e-mail addresses in email module with useful options
- Right click on e-mail attachment offers Save as option in the files module
- Bug fixes

2008/12/03 Version 3.00-stable-2
- Bug fixes
- Import/export of custom fields in addressbook (pro)
- Add /delete mail folders by right clicking the tree menu
- Added Spanish translation
- Added Brazilan Portugese translation

2008/11/24 Version 3.00-stable-1
- Last known bugs were fixed
- New caching system for the e-mail to impove performance.

2008/11/07 Version 3.00-unstable-19
Lot's of bugs were fixed from version 1 till 19. This should be the 
last "unstable" release.

- Changed to MySQLi improved PHP mysql extension
- Removed smart_addslashes and smart_stripslashes functions. GO runs best
  with magic_quotes_gpc=off now and escaping values that go into the database
  is done at the lowest level. Either by the MySQLi extension or in the
  GO database class. This makes GO safer and programmers don't have to worry about
  it anymore. 

- Added thumbnail view and Image viewer in files module
- E-mail blocks remote images for unknown senders