@@ -7,6 +7,8 @@
 - New timesheet in projects module for easier time registration
 - Better display of project information and subprojects
 - Sort project statuses by drag and drop
+- Portlets on the summary page autorefresh
+- Browse project files from file manager
 - Bug fixes
 
 2008/12/18 Version 3.00-stable-5
